...
                                    </items>
                                </menu>
                            </menuItem>
                        </items>
                    </menu>
                </menuItem>
                <menuItem title="View" id="H8h-7b-M4v">
                    <modifierMask key="keyEquivalentModifierMask"/>
                    <menu key="submenu" title="View" id="HyV-fh-RgO">
                        <items>
                            <menuItem title="by Small Icon" id="14m-g1-3m2">
                                <modifierMask key="keyEquivalentModifierMask"/>
                                <connections><action selector="showBySmallIcon:" target="Voe-Tx-rLC" id="vsmallact"/></connections>
                            </menuItem>
                            <menuItem title="as Buttons" id="buttonViewItem">
                                <modifierMask key="keyEquivalentModifierMask"/>
                                <connections><action selector="showAsButtons:" target="Voe-Tx-rLC" id="vbuttonsact"/></connections>
                            </menuItem>
                            <menuItem title="by Icon" id="mBu-PO-GPu">
                                <modifierMask key="keyEquivalentModifierMask"/>
                                <connections><action selector="showByIcon:" target="Voe-Tx-rLC" id="viconact"/></connections>
                            </menuItem>
                            <menuItem title="by Name" id="UAM-Sp-53s">
                                <modifierMask key="keyEquivalentModifierMask"/>
                                <connections><action selector="showByName:" target="Voe-Tx-rLC" id="vnameact"/></connections>
                            </menuItem>
                            <menuItem title="by Size" id="2x0-D2-60d">
                                <modifierMask key="keyEquivalentModifierMask"/>
                                <connections><action selector="showBySize:" target="Voe-Tx-rLC" id="vsizeact"/></connections>
...
